# contextual-chunker

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
config/: example.yaml
examples/: ingest_to_redis.py
src/contextual_chunker/: __init__.py  __main__.py  base.py  chunker.py  cli.py  config.py  io.py  prompts.py  token_chunker.py
src/contextual_chunker/extractors/: __init__.py  docx.py  pdf.py  text.py
src/contextual_chunker/llm/: __init__.py  base.py  gemini.py  openai.py
tests/: test_chunker.py  test_cli.py  test_config.py  test_extractors.py
