[project]
name = "contextual-chunker"
version = "0.1.0"
description = "Anthropic-style contextual chunking for retrieval. Turns documents into embed-ready, context-enriched chunks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "tiktoken>=0.7.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "google-genai>=0.3.0",
    "openai>=1.40",
    "pymupdf>=1.24",
    "python-docx>=1.1",
]

[project.scripts]
contextual-chunker = "contextual_chunker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextual_chunker"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
